Fixed IE11 flex layout issue and banner width

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -42,7 +42,8 @@
 }
 
 .cc-banner .cc-message {
-  flex: 1;
+  flex: auto;
+  max-width: 100%;
 }
 
 /* COMPLIANCE BOX */
